Bug 966493 - Mark touchstart and end events as handling user input. r=smaug